* 2007-08-10 - thorben.betten@open-xchange.com

 - Forgot to delete temporary uploaded files manually after sending message
 - Bugfix #8701: Invoking own decoding method for MIME-encoded personal
   parts in internet addresses
 - Bugfix #8686: Closing first statement

* 2007-08-09 - marcus.klein@open-xchange.com

 - Added max idle timeout for uploads to configuration setting tree.

* 2007-08-09 - tobias.prinz@open-xchange.com

 - Bug 8653: Fixed counting of imports. Again.
 - Bug 8527: Fixed counting of imports.

* 2007-08-09 - ben.pahne@open-xchange.com

- Fixed Bug 8728: Private Flag was not removed after a move into
  a public folder.

* 2007-08-09 - thorben.betten@open-xchange.com

 - Bugfix 8726: Fixed detection of uuencoded body parts in a message
 - Enhanced file upload servlet by get request for uploaded files
 - New property in server.properties to define the max. idle time in millis
   for a temporary uploaded file
 - Enhanced mail by inline images referenced by locally stored files
############## PAY ATTENTION TO ME ! ################
 - CONFIG change: server.properties got an additonal
   property to define the max. idle time in millis
   for a temporary uploaded file
#####################################################

* 2007-08-09 - martin.kauss@open-xchange.com

 - Fixed some typos related to bug #7936.

* 2007-08-09 - francisco.laguna@open-xchange.com

 - Bugfix 8725: Remove depedency on user and userconfiguration for attachment and property cleander.

* 2007-08-08 - marcus.klein@open-xchange.com

 - Bugfix 8720: Added invalidation for context login information mappings.
 - Finished generic config jump.

* 2007-08-08 - tobias.prinz@open-xchange.com

 - Refactoring: JSONWriter replaced with OXJSONWriter for ImportServlet
 - Bug 8681: Checking for modules in Importers.
 - Bug 7936: Fixed typos in exception messages.

* 2007-08-08 - thorben.betten@open-xchange.com

 - Additional monitoring info in AJP monitor to count number of processed